# mcp_plexus

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_dev.py
mcp_plexus/: __init__.py  dependencies.py  main.py  settings.py  tool_loader.py
mcp_plexus/cli/: __init__.py  admin_cli.py  config.py  ext_oauth_cli.py  main_cli.py  tenant_cli.py  utils_cli.py
mcp_plexus/core/: __init__.py  global_registry.py  server.py
mcp_plexus/external_services/: __init__.py
mcp_plexus/mcp_handlers/: __init__.py  mcp_router.py  tenant_mcp_app.py
mcp_plexus/oauth/: __init__.py  decorators.py  endpoints.py  errors.py  models.py  pkce.py  provider.py  sqlite_auth_code_store.py  sqlite_external_oauth_provider_config_store.py  sqlite_oauth_internal_client_store.py  sqlite_oauth_internal_token_store.py  sqlite_user_external_token_store.py  storage.py  storage_interfaces.py  user_token_store.py
mcp_plexus/oauth_providers_admin/: __init__.py  endpoints.py  service.py
mcp_plexus/plexus_auth/: __init__.py  dependencies.py  endpoints.py  errors.py  models.py  sqlite_user_auth_token_store.py  storage_interfaces.py  token_manager.py
mcp_plexus/plexus_context/: __init__.py  context.py
mcp_plexus/services/: __init__.py  decorators.py  endpoints.py  models.py  service.py  sqlite_user_external_api_key_store.py
mcp_plexus/sessions/: __init__.py  session_data.py  session_manager.py  session_store.py
mcp_plexus/storage/: __init__.py  sqlite_base.py
mcp_plexus/tenants/: __init__.py  endpoints.py  models.py  service.py  sqlite_tenant_store.py  storage_interfaces.py
mcp_plexus/tool_modules/: example_api_key_tools.py  example_basic_tools.py  (+2 more)
tests/: test_api_key_submission.py  test_authentication_methods.py  test_full_flow.py  test_tool_requires_api_key.py  test_tool_sets_and_scoping.py
(+4 files in other folders)
