[project]
name = "mcp_plexus"
version = "0.2.1" # Match your app version or manage this better
description = "MCP Plexus: Multi-Tenant, OAuth-Enabled MCP Server Framework"
readme = "README.md"
requires-python = ">=3.10" 
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "fastmcp>=2.4.0", # Assuming a recent version, adjust as needed
    "redis",
    "pydantic-settings",
    "python-dotenv",
    "httpx",
    "typer[all]",
    "requests", 
]

[project.scripts]
plexus = "mcp_plexus.cli.main_cli:cli_entry_point"

# This assumes your mcp_plexus package is directly under the project root.
# If mcp_plexus is inside an src/ directory, adjust 'where' and 'include'.
[tool.setuptools.packages.find]
where = ["."] 
include = ["mcp_plexus*"]
exclude = ["mcp_plexus.tests*"] 

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
